--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MythicMobs_edit"
         mc:Ignorable="d"
-        Title="MythicMobs_edit" Height="376" Width="463" WindowStartupLocation="Manual" ResizeMode="NoResize">
+        Title="MythicMobs_edit" Height="376" Width="463" WindowStartupLocation="Manual" ResizeMode="NoResize" Icon="image/方的7.jpg">
     <Window.Resources>
         <Style TargetType="Label">
             <Setter Property="Background" Value="#22FF0000"/>
@@ -23,7 +23,7 @@
     </Window.Resources>
     <Grid Background="Black">
         <Image HorizontalAlignment="Left" Height="337" VerticalAlignment="Top" Width="337"
-               Source="icon.ico">
+               Source="image/方的7.jpg">
         </Image>
         <Button Content="添加生物" HorizontalAlignment="Left" Margin="337,0,0,0" VerticalAlignment="Top" Width="110"
                 Height="30" Click="Button_Click" Style="{StaticResource Button}"/>
