--- a/WPF/Mob/Effects_type/Flames.xaml
+++ b/WPF/Mob/Effects_type/Flames.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <Button Content="OK" HorizontalAlignment="Left" Margin="205,318,0,0" VerticalAlignment="Top" Width="75" Height="20" Style="{StaticResource Button}" Click="Button_Click" IsDefault="True"/>
 
-        <Other:Skill_Tag HorizontalAlignment="Left" Height="220" Margin="-5,0,0,0" VerticalAlignment="Top" Width="292" x:Name="Type"/>
+        <Other:Skill_Tag HorizontalAlignment="Left" Height="220" VerticalAlignment="Top" Width="292" x:Name="Type"/>
         <Other:Triggers HorizontalAlignment="Left" Height="93" Margin="0,220,0,0" VerticalAlignment="Top" Width="280" x:Name="Triggers_"/>
 
     </Grid>
