--- a/WPF/Mob/Effects_type/Geyser.xaml
+++ b/WPF/Mob/Effects_type/Geyser.xaml
@@ -6,19 +6,19 @@
         xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob.Effects_type"
         xmlns:Other="clr-namespace:MythicMobs_edit.WPF.Mob.Other" 
         mc:Ignorable="d"
-        Title="修改粒子效果：Geyser" Height="401" Width="378" Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="修改粒子效果：Geyser" Height="461" Width="303" Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Label Content="类型" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="高度" HorizontalAlignment="Left" Margin="169,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="208,2,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.height}" VerticalAlignment="Top" Width="120"
+        <Label Content="高度" HorizontalAlignment="Left" Margin="5,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,62,0,0" Text="{Binding Effects.Option.height}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
         <Label Content="速度" HorizontalAlignment="Left" Margin="5,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,32,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.speed}" VerticalAlignment="Top" Width="120"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,32,0,0" Text="{Binding Effects.Option.speed}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
-        <Button Content="OK" HorizontalAlignment="Left" Margin="285,340,0,0" VerticalAlignment="Top" Width="75" Height="20" Style="{StaticResource Button}" Click="Button_Click" IsDefault="True"/>
+        <Button Content="OK" HorizontalAlignment="Left" Margin="210,400,0,0" VerticalAlignment="Top" Width="75" Height="20" Style="{StaticResource Button}" Click="Button_Click" IsDefault="True"/>
 
-        <Other:Skill_Tag HorizontalAlignment="Left" Height="220" Margin="0,60,0,0" VerticalAlignment="Top" Width="292" x:Name="Type"/>
-        <Other:Triggers HorizontalAlignment="Left" Height="93" Margin="0,275,0,0" VerticalAlignment="Top" Width="280" x:Name="Triggers_"/>
+        <Other:Skill_Tag HorizontalAlignment="Left" Height="220" Margin="0,90,0,0" VerticalAlignment="Top" Width="292" x:Name="Type"/>
+        <Other:Triggers HorizontalAlignment="Left" Height="93" Margin="0,307,0,0" VerticalAlignment="Top" Width="280" x:Name="Triggers_"/>
         <ComboBox HorizontalAlignment="Left" Margin="44,2,0,0" VerticalAlignment="Top" Width="120" Style="{StaticResource ComboBoxStyle}" Height="20"
                   Name="Type_F" Text="{Binding Effects.Option.Type}" IsReadOnly="True"/>
 
