--- a/WPF/Mob/Effects_type/ItemSpraycs.xaml
+++ b/WPF/Mob/Effects_type/ItemSpraycs.xaml
@@ -9,13 +9,13 @@
         Title="修改粒子效果：Item Spray" Height="461" Width="398" Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Label Content="物品名字" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,4,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.item}" VerticalAlignment="Top" Width="120"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,4,0,0" Text="{Binding Effects.Option.item}" VerticalAlignment="Top" Width="120"
                  Style="{StaticResource TextBox}"/>
         <Label Content="物品数量" HorizontalAlignment="Left" Margin="193,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="256,2,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.amount}" VerticalAlignment="Top" Width="120"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="256,2,0,0" Text="{Binding Effects.Option.amount}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
         <Label Content="持续时间" HorizontalAlignment="Left" Margin="5,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,32,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.duration}" VerticalAlignment="Top" Width="120"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,32,0,0" Text="{Binding Effects.Option.duration}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
         <CheckBox Content="允许捡起" HorizontalAlignment="Left" Margin="272,95,0,0" VerticalAlignment="Top" Style="{StaticResource Check}"
                   IsChecked="{Binding Effects.Option.allowpickup}"/>
@@ -24,16 +24,16 @@
         <Other:Skill_Tag HorizontalAlignment="Left" Height="220" Margin="0,120,0,0" VerticalAlignment="Top" Width="292" x:Name="Type"/>
         <Other:Triggers HorizontalAlignment="Left" Height="93" Margin="0,335,0,-6" VerticalAlignment="Top" Width="280" x:Name="Triggers_"/>
         <Label Content="半径" HorizontalAlignment="Left" Margin="205,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="256,32,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.radius}" VerticalAlignment="Top" Width="120"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="256,32,0,0" Text="{Binding Effects.Option.radius}" VerticalAlignment="Top" Width="120"
             PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
         <Label Content="速度" HorizontalAlignment="Left" Margin="17,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,62,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.velocity}" VerticalAlignment="Top" Width="120"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,62,0,0" Text="{Binding Effects.Option.velocity}" VerticalAlignment="Top" Width="120"
             PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
         <Label Content="Y轴速度" HorizontalAlignment="Left" Margin="195,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="256,62,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.yVelocity}" VerticalAlignment="Top" Width="120"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="256,62,0,0" Text="{Binding Effects.Option.yVelocity}" VerticalAlignment="Top" Width="120"
             PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
-        <Label Content="Y轴偏移" HorizontalAlignment="Left" Margin="17,90,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,92,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.yOffset}" VerticalAlignment="Top" Width="120"
+        <Label Content="Y轴偏移" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,92,0,0" Text="{Binding Effects.Option.yOffset}" VerticalAlignment="Top" Width="120"
             PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
 
     </Grid>
