--- a/WPF/Mob/Effects_type/Spin.xaml
+++ b/WPF/Mob/Effects_type/Spin.xaml
@@ -9,14 +9,14 @@
         Title="修改粒子效果：Spin" Height="431" Width="305" Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Label Content="间隔" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,3,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.duration}" VerticalAlignment="Top" Width="120"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,3,0,0" Text="{Binding Effects.Option.duration}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
         <Button Content="OK" HorizontalAlignment="Left" Margin="205,373,0,0" VerticalAlignment="Top" Width="75" Height="20" Style="{StaticResource Button}" Click="Button_Click" IsDefault="True"/>
 
         <Other:Skill_Tag HorizontalAlignment="Left" Height="220" Margin="0,60,0,0" VerticalAlignment="Top" Width="292" x:Name="Type"/>
         <Other:Triggers HorizontalAlignment="Left" Height="93" Margin="0,275,0,0" VerticalAlignment="Top" Width="280" x:Name="Triggers_"/>
         <Label Content="速度" HorizontalAlignment="Left" Margin="5,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,32,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.velocity}" VerticalAlignment="Top" Width="120"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,32,0,0" Text="{Binding Effects.Option.velocity}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
 
     </Grid>
