--- a/WPF/Mob/Mob_type/ARMOR_STAND.xaml
+++ b/WPF/Mob/Mob_type/ARMOR_STAND.xaml
@@ -31,27 +31,27 @@
         <CheckBox Content="是否是小盔甲架" HorizontalAlignment="Left" Height="15" Margin="176,168,0,0" VerticalAlignment="Top"
             IsChecked="{Binding obj.Small}" x:Name="Small" RenderTransformOrigin="0.368,0.667" Style="{StaticResource Check}"/>
 
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,43,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,43,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.ItemBody}" VerticalAlignment="Top" Width="200" Name="ItemBody"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,68,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,68,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.ItemFeet}" VerticalAlignment="Top" Width="200" x:Name="ItemFeet"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,93,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,93,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.ItemHand}" VerticalAlignment="Top" Width="200" x:Name="ItemHand"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,118,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,118,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.ItemHead}" VerticalAlignment="Top" Width="200" x:Name="ItemHead"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,143,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="109,143,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.ItemLegs}" VerticalAlignment="Top" Width="200" x:Name="ItemLegs"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="49,213,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="49,213,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.Pose.Head}" VerticalAlignment="Top" Width="86"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="49,238,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="49,238,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.Pose.LeftArm}" VerticalAlignment="Top" Width="86"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="49,263,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="49,263,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.Pose.LeftLeg}" VerticalAlignment="Top" Width="86"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="223,213,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="223,213,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.Pose.Body}" VerticalAlignment="Top" Width="86"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="223,238,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="223,238,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.Pose.RightArm}" VerticalAlignment="Top" Width="86"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="223,263,0,0" TextWrapping="Wrap" Style="{StaticResource TextBox}"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="223,263,0,0" Style="{StaticResource TextBox}"
                  Text="{Binding obj.Pose.RightLeg}" VerticalAlignment="Top" Width="86"/>
 
     </Grid>
