--- a/WPF/Mob/Mob_type/PRIMED_TNT.xaml
+++ b/WPF/Mob/Mob_type/PRIMED_TNT.xaml
@@ -10,9 +10,9 @@
         <Label Content="爆炸时间" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
         <Label Content="爆炸强度" HorizontalAlignment="Left" Margin="10,55,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
 
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="73,32,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="207"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="73,32,0,0" VerticalAlignment="Top" Width="207"
                  Text="{Binding obj.FuseTicks}" PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="73,57,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="207"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="73,57,0,0" VerticalAlignment="Top" Width="207"
             Text="{Binding obj.ExplosionYield}" PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
 
         <CheckBox Content="爆炸是否产生火焰" HorizontalAlignment="Left" Margin="10,85,0,0" VerticalAlignment="Top"
