--- a/WPF/Mob/Other/DropsChange.xaml
+++ b/WPF/Mob/Other/DropsChange.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob.Other"
         mc:Ignorable="d"
-        Title="掉落物修改" Height="150" Width="228" ResizeMode="NoResize" Icon="/MythicMobs_edit;component/icon.ico" WindowStartupLocation="CenterScreen">
+        Title="掉落物修改" Height="150" Width="228" ResizeMode="NoResize" Icon="/MythicMobs_edit;component/image/方的7.jpg" WindowStartupLocation="CenterScreen">
     <Grid Background="Black" Margin="0,0,0,0">
 
         <Label Content="类型/名字" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
@@ -14,9 +14,9 @@
         <Label Content="{Binding Drops.chance}" HorizontalAlignment="Left" Margin="175,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"
                Height="26" Width="35"/>
 
-        <TextBox HorizontalAlignment="Left" Margin="39,35,0,0" Height="20" TextWrapping="Wrap" Text="{Binding Drops.amount}" VerticalAlignment="Top"
+        <TextBox HorizontalAlignment="Left" Margin="39,35,0,0" Height="20" Text="{Binding Drops.amount}" VerticalAlignment="Top"
                  Style="{StaticResource TextBox}" Width="171" PreviewTextInput="TextCompositionEventArgs"/>
-        <TextBox HorizontalAlignment="Left" Margin="68,5,0,0" TextWrapping="Wrap" Text="{Binding Drops.Type}" VerticalAlignment="Top"
+        <TextBox HorizontalAlignment="Left" Margin="68,5,0,0" Text="{Binding Drops.Type}" VerticalAlignment="Top"
                  Style="{StaticResource TextBox}" Width="142"/>
 
         <Slider HorizontalAlignment="Left" Margin="39,62,0,0" VerticalAlignment="Top" Width="134" Style="{StaticResource Slider}" 
